<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>minitwit</groupId>
    <artifactId>minitwit-java</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.9</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.9</version>
        </dependency>
        <!-- Prometheus core + JVM metrics -->  
        <dependency>  
            <groupId>io.prometheus</groupId>  
            <artifactId>simpleclient</artifactId>  
            <version>0.16.0</version>  
        </dependency>  
        <dependency>  
            <groupId>io.prometheus</groupId>  
            <artifactId>simpleclient_hotspot</artifactId>  
            <version>0.16.0</version>  
        </dependency> 
        <dependency>
            <groupId>io.prometheus</groupId>
            <artifactId>simpleclient_servlet</artifactId>
            <version>0.16.0</version>
        </dependency>  
        <!-- HTTP exporter on its own port -->  
        <dependency>  
            <groupId>io.prometheus</groupId>  
            <artifactId>simpleclient_httpserver</artifactId>  
            <version>0.16.0</version>  
        </dependency>  
    
        <!-- SparkJava web framework -->  
        <dependency>  
            <groupId>com.sparkjava</groupId>  
            <artifactId>spark-core</artifactId>  
            <version>2.9.4</version>  
        </dependency>  

        <!-- Freemarker -->
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
            <version>2.3.34</version>
        </dependency>

        <!-- SQLite -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.47.0.0</version>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>

        <!-- BCrypt for password hashing -->
        <dependency>
            <groupId>org.mindrot</groupId>
            <artifactId>jbcrypt</artifactId>
            <version>0.4</version>
        </dependency>

        <!-- Apache Commons for Gravatar hash -->
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.18.0</version>
        </dependency>
    </dependencies>

    <build>
    <plugins>
        <!-- 2️⃣ Checkstyle for Java linting -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-checkstyle-plugin</artifactId>
            <version>3.2.2</version>
            <configuration>
                <!-- you can point this at a bundled google_checks.xml or your own rules -->
                <configLocation>google_checks.xml</configLocation>
                <failOnViolation>true</failOnViolation>
            </configuration>
            <executions>
                <execution>
                <phase>verify</phase>
                <goals><goal>check</goal></goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.5.0</version>
            <executions>
                <!-- Build for Main Application -->
                <execution>
                    <id>shade-app</id>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
                        <finalName>minitwit-java-app</finalName>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                <mainClass>minitwit.App</mainClass>
                            </transformer>
                        </transformers>
                    </configuration>
                </execution>

                <!-- Build for Simulator API -->
                <execution>
                    <id>shade-simulator-api</id>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
                        <finalName>minitwit-java-simulator-api</finalName>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                <mainClass>minitwit.SimulatorAPI</mainClass>
                            </transformer>
                        </transformers>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
</build>

</project>